suite/tests/decls/valid/extern-func-int.c
int main(void)
{
    extern int a;
}
