suite/tests/decls/invalid/static-func-in-block.c
int main(void)
{
    static int foo(void);
}
